Feature: Landing page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="features">
             <div>
                 <h3>Velocidad del dispositivo</h3>
-                <p></p>
+                <p>Hasta 2 veces más rápida que su versión anterior</p>
                 <img src="https://i.blogs.es/f1ba3a/ipad-mini-5/650_1200.jpeg" width="100" alt="">
             </div>
             <div>
