Feature: landing page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div>
                 <h3>Mejor Pantalla</h3>
-                <p>Pantalla con mejor resolución</p>
+                <p>Pantalla con mejor Resolución</p>
                 <img src="https://www.lavanguardia.com/andro4all/hero/2023/08/ipad-mini-7.jpg?width=768&aspect_ratio=16:9&format=nowebp" width="100" alt="">
             </div>
             <div></div>
