--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <ul>
                 <!-- Dentro de los simbolos <> solo van atributos, no etiquetas -->
                 <li><a href="" aria-current="page">Características</a></li>
-                <li><a href="testimonios.html">Testimonios</a></li>
-                <li><a href="compra.html">Compra</a></li>
+                <li><a href="">Testimonios</a></li>
+                <li><a href="">Compra</a></li>
                 <li><a href="">Envios</a></li>
                 <li><a href="">Pagos</a></li>  
                 <li><a href="">Contacto</a></li>
