--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 id="hero-title">iPad Mini 7</h1>
             <div>
             <p>Hasta 2 veces más rápida que su versión anterior</p>
-            <p>Pantalla con mejor resolución</p>
+            <p>Pantalla con mejor resolución.</p>
         </div>
         </section>
 
