--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <!-- Logo de la empresa -->
             <div>
                 <a href="./index.html" aria-label="Ir a la página de inicio">
+                    <img id="apple" src="https://cdn-icons-png.flaticon.com/128/731/731985.png" alt="Logo de Apple">
                     <p>iPad</p>
                 </a>
             </div>
@@ -33,7 +34,7 @@
     <!-- Contenido principal -->
     <main>
         <section id="hero" aria-labelledby="hero-title">
-            <img src="img/iPadMini7.png" alt="Imagen del iPad mini 7" />
+            <img src="img/iPadMini7.png" alt="Imagen del iPad mini 7" >
             <h1 id="hero-title">iPad Mini 7</h1>
             <div>
                 <p>Hasta 2 veces más rápida que su versión anterior</p>
@@ -99,10 +100,10 @@
             <div class="footer-links">
                 <h3>Enlaces importantes</h3>
                 <ul>
-                    <li><img src="" alt=""><a href="index.html">Inicio</a></li>
-                    <li><img src="" alt=""><a href="contacto.html">Contacto</a></li>
-                    <li><img src="" alt=""><a href="terminos.html">Términos y Condiciones</a></li>
-                    <li><img src="" alt=""><a href="privacidad.html">Política de Privacidad</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="terminos.html">Términos y Condiciones</a></li>
+                    <li><a href="privacidad.html">Política de Privacidad</a></li>
                 </ul>
             </div>
 
