--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <ul>
                 <!-- Dentro de los simbolos <> solo van atributos, no etiquetas -->
                 <li><a href="" aria-current="page">Características</a></li>
-                <li><a href="">Testimonios</a></li>
-                <li><a href="">Compra</a></li>
+                <li><a href="testimonios.html" target="_blank">Testimonios</a></li>
+                <li><a href="compra.html">Compra</a></li>
                 <li><a href="">Envios</a></li>
                 <li><a href="">Pagos</a></li>
                 <li><a href="">Contacto</a></li>
@@ -34,7 +34,7 @@
     <!-- Contenido principal -->
     <main>
         <section id="hero" aria-labelledby="hero-title">
-            <img src="img/iPadMini7.png" alt="Imagen del iPad mini 7" >
+            <img src="img/iPadMini7.png" alt="Imagen del iPad mini 7">
             <h1 id="hero-title">iPad Mini 7</h1>
             <div>
                 <p>Hasta 2 veces más rápida que su versión anterior</p>
@@ -53,23 +53,25 @@
                 <p>Pantalla con mejor Resolución</p>
                 <img src="img/ipad-pantalla.jpg" width="100" alt="">
             </div>
-            <div></div>
-        </section>
 
-        <section id="delivery" aria-label="Métodos de envío">
-            <h2>Envíos</h2>
-            <p>Envíos a todo el país</p>
-            <p>Entrega en 24 horas</p>
-            <p>Envíos gratis en compras mayores a $100</p>
         </section>
+        <section id="metodos">
+            <section id="delivery" aria-label="Métodos de envío">
+                <h2>Envíos</h2>
+                <p>Envíos a todo el país</p>
+                <p>Entrega en 24 horas</p>
+                <p>Envíos gratis en compras mayores a $100</p>
+            </section>
 
-        <section id="payment-methods" aria-label="Métodos de pago">
-            <h2>Métodos de pago</h2>
-            <p>Aceptamos tarjetas de crédito y débito</p>
-            <p>Transferencias bancarias</p>
-            <p>PayPal</p>
+            <section id="payment-methods" aria-label="Métodos de pago">
+                <h2>Métodos de pago</h2>
+                <p>Aceptamos tarjetas de crédito y débito</p>
+                <p>Transferencias bancarias</p>
+                <p>PayPal</p>
+            </section>
         </section>
-
+        <!-- Galería de Imagenes -->
+        <!-- =========================================== -->
         <section id="galeria" aria-label="Galería de imágenes">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp1WOBvCIxo7T-ifG-1FCuCKyX7j-RPnCGbA&s"
                 alt="">
@@ -85,7 +87,7 @@
         </section>
     </main>
     <!-- Pie de página (links, reclamación, dirección,etc...) -->
-     <!-- ================================================= -->
+    <!-- ================================================= -->
     <footer>
         <section class="footer-container">
             <div class="footer-contact">
