--- a/testimonios.html
+++ b/testimonios.html
@@ -20,8 +20,8 @@
             <!-- Elementos del menu -->
             <ul>
                 <!-- Dentro de los simbolos <> solo van atributos, no etiquetas -->
-                <li><a href="" aria-current="page">Características</a></li>
-                <li><a href="testimonios.html">Testimonios</a></li>
+                <li><a href="" >Características</a></li>
+                <li><a href="" aria-current="page">Testimonios</a></li>
                 <li><a href="compra.html">Compra</a></li>
                 <li><a href="">Envios</a></li>
                 <li><a href="">Pagos</a></li>
