--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
         </section>
-        <section id="metodos">
+        <div id="metodos">
             <section id="delivery" aria-label="Métodos de envío">
                 <h2>Envíos</h2>
                 <p>Envíos a todo el país</p>
@@ -69,7 +69,7 @@
                 <p>Transferencias bancarias</p>
                 <p>PayPal</p>
             </section>
-        </section>
+        </div>
         <!-- Galería de Imagenes -->
         <!-- =========================================== -->
         <section id="galeria" aria-label="Galería de imágenes">
