--- a/testimonios.html
+++ b/testimonios.html
@@ -3,59 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de testimonios</title>
+    <title>Página de testimonios</title>
     <link rel="stylesheet" href="css/testimonios.css">
 </head>
 <body>
     <header>
         <nav aria-label="Menú Principal">
-            <!-- Logo de la empresa -->
             <div>
-                <a href="./index.html" aria-label="Ir a la página de inicio">
+                <a href="./index.html" target="_blank" aria-label="Ir a la página de inicio">
+                <img id="apple" src="https://cdn-icons-png.flaticon.com/128/731/731985.png" alt="Logo de Apple">
                     <p>iPad</p>
                 </a>
             </div>
-
             <h1>Testimonios</h1>
-            <!-- Elementos del menu -->
             <ul>
-                <!-- Dentro de los simbolos <> solo van atributos, no etiquetas -->
                 <li><a href="" >Características</a></li>
                 <li><a href="" aria-current="page">Testimonios</a></li>
                 <li><a href="compra.html">Compra</a></li>
-                <li><a href="">Envios</a></li>
+                <li><a href="">Envíos</a></li>
                 <li><a href="">Pagos</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <h2>Lo que dicen nuestros clientes</h2>
+        <section class="testimonios">
+            <div class="testimonio">
+                <p>"El iPad ha cambiado la forma en que trabajo, su rendimiento es increíble."</p>
+                <span>- Juan Pérez</span>
+            </div>
+            <div class="testimonio">
+                <p>"Diseñar en este dispositivo es una experiencia fluida y cómoda."</p>
+                <span>- Ana Gómez</span>
+            </div>
+            <div class="testimonio">
+                <p>"La batería dura todo el día, perfecto para mis clases y reuniones."</p>
+                <span>- Carlos Ramírez</span>
+            </div>
+            <div class="testimonio">
+                <p>"Ideal para ver películas y leer libros, la pantalla es excelente."</p>
+                <span>- Sofía Martínez</span>
+            </div>
+            <div class="testimonio">
+                <p>"El Apple Pencil hace que tomar notas sea súper intuitivo y fácil."</p>
+                <span>- Diego Fernández</span>
+            </div>
+            <div class="testimonio">
+                <p>"Muy liviano y rápido, es el mejor dispositivo que he comprado."</p>
+                <span>- Laura Castillo</span>
+            </div>
+        </section>
     </main>
     <aside>
         <div class="filter-group">
             <h3>Calificación</h3>
             <div class="filter-options">
-                <label>
-                    <input type="checkbox" name="rating" value="5">
-                    5 estrellas
-                </label>
-                <label>
-                    <input type="checkbox" name="rating" value="4">
-                    4 estrellas
-                </label>
-                <label>
-                    <input type="checkbox" name="rating" value="3">
-                    3 estrellas
-                </label>
-                <label>
-                    <input type="checkbox" name="rating" value="2">
-                    2 estrellas
-                </label>
-                <label>
-                    <input type="checkbox" name="rating" value="1">
-                    1 estrella
-                </label>
+                <label><input type="checkbox" name="rating" value="5"> 5 estrellas</label>
+                <label><input type="checkbox" name="rating" value="4"> 4 estrellas</label>
+                <label><input type="checkbox" name="rating" value="3"> 3 estrellas</label>
+                <label><input type="checkbox" name="rating" value="2"> 2 estrellas</label>
+                <label><input type="checkbox" name="rating" value="1"> 1 estrella</label>
             </div>
         </div>
         <button class="filter-btn">Aplicar filtros</button>
