--- a/compra.html
+++ b/compra.html
@@ -1,13 +1,215 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Compra iPad Mini 7</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/compra.css">
+</head>
+
+<body>
+    <!-- Navegación (menu) -->
+    <header>
+        <nav aria-label="Menú Principal">
+            <!-- Logo de la empresa -->
+            <div>
+                <a href="./index.html" aria-label="Ir a la página de inicio">
+                    <img id="apple" src="https://cdn-icons-png.flaticon.com/128/731/731985.png" alt="Logo de Apple">
+                    <p>iPad</p>
+                </a>
+            </div>
+            <!-- Elementos del menu -->
+            <ul>
+                <li><a href="index.html">Características</a></li>
+                <li><a href="testimonios.html" target="_blank">Testimonios</a></li>
+                <li><a href="compra.html" aria-current="page">Compra</a></li>
+                <li><a href="">Envios</a></li>
+                <li><a href="">Pagos</a></li>
+                <li><a href="">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <!-- Contenido principal con sidebar -->
+    <div class="compra-container">
+        <!-- Sidebar de compra -->
+        <aside class="sidebar">
+            <h2>Proceso de compra</h2>
+            <ul class="sidebar-steps">
+                <li class="active"><a href="#producto">1. Selección de producto</a></li>
+                <li><a href="#configuracion">2. Configurar iPad</a></li>
+                <!-- <li><a href="#envio">3. Información de envío</a></li>
+                <li><a href="#pago">4. Método de pago</a></li>
+                <li><a href="#resumen">5. Resumen del pedido</a></li> -->
+            </ul>
+
+            <div class="sidebar-resumen">
+                <h3>Tu pedido</h3>
+                <div class="resumen-item">
+                    <p><strong>iPad Mini 7</strong></p>
+                    <p>Chip A17 Pro</p>
+                    <p>256GB - Gris espacial</p>
+                    <p class="precio">€749.00</p>
+                </div>
+                <div class="resumen-total">
+                    <p><strong>Total:</strong></p>
+                    <p class="precio-total">€749.00</p>
+                </div>
+            </div>
+        </aside>
+
+        <!-- Contenido principal de compra -->
+        <main class="compra-main">
+            <section id="producto" class="compra-section">
+                <h1>Comprar iPad Mini 7</h1>
+                <div class="producto-detalle">
+                    <div class="producto-imagen">
+                        <img src="img/iPadMini7.png" alt="iPad Mini 7">
+                    </div>
+                    <div class="producto-info">
+                        <h2>iPad Mini 7</h2>
+                        <p class="producto-descripcion">El iPad Mini más potente hasta la fecha, con el nuevo chip A17 Pro, pantalla Liquid Retina de 8,3 pulgadas y compatibilidad con Apple Pencil Pro.</p>
+                        <div class="producto-precio">
+                            <p>Desde <span class="precio">€749.00</span></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="configuracion" class="compra-section">
+                <h2>Configura tu iPad Mini 7</h2>
+                
+                <div class="config-option">
+                    <h3>Elige un acabado</h3>
+                    <div class="color-options">
+                        <div class="color-option">
+                            <input type="radio" id="color-space-gray" name="color" checked>
+                            <label for="color-space-gray">
+                                <span class="color-circle space-gray"></span>
+                                <span class="color-name">Gris espacial</span>
+                            </label>
+                        </div>
+                        <div class="color-option">
+                            <input type="radio" id="color-silver" name="color">
+                            <label for="color-silver">
+                                <span class="color-circle silver"></span>
+                                <span class="color-name">Plata</span>
+                            </label>
+                        </div>
+                        <div class="color-option">
+                            <input type="radio" id="color-purple" name="color">
+                            <label for="color-purple">
+                                <span class="color-circle purple"></span>
+                                <span class="color-name">Púrpura</span>
+                            </label>
+                        </div>
+                        <div class="color-option">
+                            <input type="radio" id="color-blue" name="color">
+                            <label for="color-blue">
+                                <span class="color-circle blue"></span>
+                                <span class="color-name">Azul</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="config-option">
+                    <h3>Elige la capacidad de almacenamiento</h3>
+                    <div class="storage-options">
+                        <div class="storage-option">
+                            <input type="radio" id="storage-128" name="storage">
+                            <label for="storage-128">
+                                <span class="storage-size">128GB</span>
+                                <span class="storage-price">€649.00</span>
+                            </label>
+                        </div>
+                        <div class="storage-option">
+                            <input type="radio" id="storage-256" name="storage" checked>
+                            <label for="storage-256">
+                                <span class="storage-size">256GB</span>
+                                <span class="storage-price">€749.00</span>
+                            </label>
+                        </div>
+                        <div class="storage-option">
+                            <input type="radio" id="storage-512" name="storage">
+                            <label for="storage-512">
+                                <span class="storage-size">512GB</span>
+                                <span class="storage-price">€949.00</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="config-option">
+                    <h3>Conectividad</h3>
+                    <div class="connectivity-options">
+                        <div class="connectivity-option">
+                            <input type="radio" id="wifi-only" name="connectivity" checked>
+                            <label for="wifi-only">
+                                <span class="connectivity-type">Wi-Fi</span>
+                            </label>
+                        </div>
+                        <div class="connectivity-option">
+                            <input type="radio" id="wifi-cellular" name="connectivity">
+                            <label for="wifi-cellular">
+                                <span class="connectivity-type">Bluetooth</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="compra-action">
+              <a href="https://wa.me/920107243?text=Hola,%20me%20interesa%20tu%20producto" target="_blank" class="btn-continuar">Continuar con el envío</a>
+                <p class="entrega-info">Entrega gratuita a partir de €100 de compra. Recibe tu iPad Mini 7 en 24 horas.</p>
+            </section>
+        </main>
+    </div>
+
+    <!-- Pie de página -->
+    <footer>
+        <section class="footer-container">
+            <div class="footer-contact">
+                <h3>Contacto</h3>
+                <address>
+                    <p><strong>Email:</strong> <a href="mailto:contacto@ipadmini.com">contacto@ipadmini.com</a></p>
+                    <p><strong>Teléfono:</strong> <a href="tel:+51900123456">900 123 456</a></p>
+                    <p><strong>Horario de atención:</strong> Lunes a Viernes | 9:00 - 18:00</p>
+                </address>
+            </div>
+
+            <div class="footer-links">
+                <h3>Enlaces importantes</h3>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="terminos.html">Términos y Condiciones</a></li>
+                    <li><a href="privacidad.html">Política de Privacidad</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-social">
+                <h3>Síguenos</h3>
+                <ul class="social-icons">
+                    <li><a href="https://facebook.com/ipadmini" aria-label="Facebook"><img
+                                src="https://cdn-icons-png.flaticon.com/128/5968/5968764.png" alt="Facebook"></a></li>
+                    <li><a href="https://twitter.com/ipadmini" aria-label="Twitter"><img
+                                src="https://cdn-icons-png.flaticon.com/128/5968/5968830.png" alt="Twitter"></a></li>
+                    <li><a href="https://instagram.com/ipadmini" aria-label="Instagram"><img
+                                src="https://cdn-icons-png.flaticon.com/128/15713/15713420.png" alt="Instagram"></a>
+                    </li>
+                    <li><a href="https://youtube.com/ipadmini" aria-label="YouTube"><img
+                                src="https://cdn-icons-png.flaticon.com/128/174/174883.png" alt="YouTube"></a></li>
+                </ul>
+            </div>
+        </section>
+
+        <div class="footer-copyright">
+            <p>© 2025 iPad Mini | Todos los derechos reservados</p>
+        </div>
+    </footer>
+</body>
+
 </html>
