--- a/testimonios.html
+++ b/testimonios.html
@@ -10,7 +10,7 @@
     <header>
         <nav aria-label="Menú Principal">
             <div>
-                <a href="./index.html" target="_blank" aria-label="Ir a la página de inicio">
+                <a href="./index.html" aria-label="Ir a la página de inicio">
                 <img id="apple" src="https://cdn-icons-png.flaticon.com/128/731/731985.png" alt="Logo de Apple">
                     <p>iPad</p>
                 </a>
